Our naming changes: Graph->Agent, Agent->SubAgent

--- a/agents-docs/content/docs/quick-start/start-development.mdx
+++ b/agents-docs/content/docs/quick-start/start-development.mdx
@@ -41,6 +41,6 @@ inkeep push
 
 ### Step 5: Chat with your agent
 
-Open the Visual Builder at http://localhost:3000, click into the weather graph, and then click the "Try It" button to start chatting with the agent.
+Open the Visual Builder at http://localhost:3000, click into the weather agent, and then click the "Try It" button to start chatting with the agent.
 
 Next, we recommend setting up observability to see live traces of your agent. See [Traces](/quick-start/traces) for more information.
