--- a/agents-docs/content/docs/overview.mdx
+++ b/agents-docs/content/docs/overview.mdx
@@ -17,7 +17,7 @@ Agents are flexible and customizable - they can take on the role you need them w
 
 Inkeep **Open Source** (this docs site) includes:
 - A Visual Builder & TypeScript SDK with 2-way sync
-- Multi-Agent Architecture (Teams of Agents)
+- Team-Based Agent Architecture (Multiple Sub Agents working together)
 - MCP Tools with Credential Management
 - A Chat UI Component Library
 - Chat with Agents in MCP, A2A, or Vercel SDK formats
@@ -40,24 +40,24 @@ A no-code interface designed to let both technical and non-technical teams creat
 
 ### TypeScript Agents SDK
 
-A code-first approach for building and managing agents and multi-agent systems, allowing you to build complex agent systems with the tools your engineering team expects.
+A code-first approach for building and managing agents, including complex agents with multiple sub agents working together. Build with the tools your engineering team expects.
 
    ```typescript
-   import { agent, agentGraph } from "@inkeep/agents-sdk";
+   import { subAgent, agent } from "@inkeep/agents-sdk";
 
-   const helloAgent = agent({
+   const helloAgent = subAgent({
      id: "hello-agent",
      name: "Hello Agent",
-     description: "A basic agent",
-     prompt: 'You are a basic agent that just says hello. You only reply with the word "hello", but you may do it in different variations like h3110, h3110w0rld, h3110w0rld! etc...',
+     description: "A basic sub agent",
+     prompt: 'You are a basic sub agent that just says hello. You only reply with the word "hello", but you may do it in different variations like h3110, h3110w0rld, h3110w0rld! etc...',
    });
 
-   export const graph = agentGraph({
-     id: "basic-graph",
-     name: "Basic Graph Example",
-     description: "A basic graph",
+   export const myAgent = agent({
+     id: "basic-agent",
+     name: "Basic Agent Example",
+     description: "A basic agent",
      defaultSubAgent: helloAgent,
-     agents: () => [helloAgent],
+     subAgents: () => [helloAgent],
    });
    ```
 
