--- a/agents-docs/content/docs/typescript-sdk/configuration.mdx
+++ b/agents-docs/content/docs/typescript-sdk/configuration.mdx
@@ -109,9 +109,9 @@ my-agent-workspace/
 ├── .env                       # Environment variables
 ├── package.json
 ├── agents/                    # Your agent definitions
-│   ├── qa-agent.graph.ts
-│   ├── support-agent.graph.ts
-│   └── router.graph.ts
+│   ├── qa-agent.agent.ts
+│   ├── support-agent.agent.ts
+│   └── router.agent.ts
 └── tools/                     # Custom tools (optional)
     └── search-tool.ts
 ```
