--- a/agents-docs/content/docs/concepts.mdx
+++ b/agents-docs/content/docs/concepts.mdx
@@ -41,6 +41,10 @@ When it's a Sub Agent's turn, it can choose to:
 
 An Agent's execution stays in this loop until one of the Sub Agents responds to the user with a final result.
 
+<Note>
+Sub Agents in Inkeep are designed to automatically respond to the user as a single, cohesive unit.
+</Note>
+
 ## Chatting with an Agent
 
 <Snippet file="multi-agent-framework/WaysToTalkToAgent.mdx" />
