--- a/agents-docs/content/docs/overview.mdx
+++ b/agents-docs/content/docs/overview.mdx
@@ -78,6 +78,4 @@ The **Visual Builder and Agents TypeScript SDK are fully interoperable**: your t
   <Card title="Conceptual Overview" icon="LuLightbulb" href="/concepts">
     Learn about the key concepts of building Agents with Inkeep.
   </Card>
-</Cards
-
->
+</Cards>
