--- a/agents-docs/content/docs/concepts.mdx
+++ b/agents-docs/content/docs/concepts.mdx
@@ -9,37 +9,39 @@ icon: "LuBoxes"
 
 In Inkeep, an Agent is the top-level entity you as an end-user can interface with via conversational experiences (chat) or trigger programmatically (via API).
 
-Under the hood, an Agent is made up of one or more **Sub Agents** that work together to complete a task and respond to the user. 
+Under the hood, an Agent is made up of one or more **Sub Agents** that work together to respond to a user or complete a task.
 
 ## Tools
 When you send a message to an Agent, it is first received by a **Default Sub Agent** that decides what to do next. 
 
-In a simple Agent, there may be only one **Sub Agent** with a few tools available to it.
+In a simple Agent, there may be only one Sub Agent with a few tools available to it.
 
 **Tools** are actions that a Sub Agent can take, like looking up information or performing a task on apps and APIs.
 
 In Inkeep, tools are added to Sub Agents as **MCP Servers**. Many services provide out-of-the-box MCP Servers, but you can also create your own and register them and their associated **Credentials** on Inkeep for Agents to use.
 
-Typically, you want a Sub Agent to handle narrow, well-defined tasks. Keeping the scope narrow allows you to optimize your **prompt** (instructions) and keep the tools available to a Sub Agent relevant to a specific scenario or task. 
+Typically, you want a Sub Agent to handle narrow, well-defined tasks. As a general rule of thumb, only add up to 5-7 tools to a Sub Agent.
 
-As a general rule of thumb, only add up to 5-7 tools to a Sub Agent.
+## Sub Agent relationships
 
-### Sub Agent relationships
-
-When what you're trying to accomplish gets complex, it can be useful to break up your logic by creating Sub Agents that are specialized in specific parts of your task or workflow. This is often referred to as a "Multi-Agent" system.
+When your scenario gets complex, it can be useful to break up your logic into multiple Sub Agents that are specialized in specific parts of your task or workflow. This is often referred to as a "Multi-Agent" system.
 
 A Sub Agent can be configured to:
 - **Transfer** control of the chat to another Sub Agent. When a transfer happens, the receiving Sub Agent becomes the primary driver of the thread and can respond to the user directly.
 - **Delegate** a subtask for another ('child') Sub Agent to do and wait for its response before proceeding with the next step. A child Sub Agent *cannot* respond directly to a user.
 
-### Sub Agent 'turn'
+## Sub Agent 'turn'
 
 When it's a Sub Agent's turn, it can choose to:
 1. Send an update message to the user
 2. Call a tool to collect information or take an action
 3. Transfer or delegate to another Sub Agent
 
-An Agent's execution stays in this loop until one of the Sub Agents responds to the user with a final result.
+An Agent's execution stays in this loop until one of the Sub Agents chooses to respond to the user with a final result.
+
+<Note>
+Sub Agents in Inkeep are designed to respond to the user as a single, cohesive unit by default.
+</Note>
 
 ## Chatting with an Agent
 
