sub agents agents

--- a/agents-docs/content/docs/concepts.mdx
+++ b/agents-docs/content/docs/concepts.mdx
@@ -1,7 +1,7 @@
 ---
 title: Core concepts of the Inkeep Agent Platform
 sidebarTitle: Concepts
-description: Learn about the key building blocks of Inkeep - Sub Agents, Agents, tools, data components, and more.
+description: Learn about the key building blocks of Inkeep - Sub Agents, tools, data components, and more.
 icon: "LuBoxes"
 ---
 
