--- a/agents-docs/content/docs/typescript-sdk/project-structure.mdx
+++ b/agents-docs/content/docs/typescript-sdk/project-structure.mdx
@@ -6,7 +6,7 @@ icon: "LuFolder"
 
 ## Overview
 
-Inkeep Agent projects follow a standardized directory structure that enables the CLI to automatically discover and manage your Sub Agents, agents, tools, and configurations. This convention-based approach simplifies project organization and deployment workflows.
+Inkeep Agent projects follow a standardized directory structure that enables the CLI to automatically discover and manage your Sub Agents, tools, and configurations. This convention-based approach simplifies project organization and deployment workflows.
 
 ## Standard Project Layout
 
