--- a/agents-docs/_snippets/multi-agent-framework/WaysToTalkToAgent.mdx
+++ b/agents-docs/_snippets/multi-agent-framework/WaysToTalkToAgent.mdx
@@ -1,8 +1,8 @@
 You can talk to an Inkeep Agent in a few ways, including:
 
-- **UI Chat Components**: Drop-in React components for chat UIs with built-in streaming and rich UI customization. See [React Chat Button](/talk-to-your-agents/react/chat-button).
+- **UI Chat Components**: Drop-in React components for chat UIs with built-in streaming and rich UI customization. See [`agents-ui`](/talk-to-your-agents/react/chat-button).
 - **As an MCP server**: Use your Inkeep Agent as if was an MCP Server. Allows you to connect it to any MCP client, like Claude, ChatGPT, Claude and other Agents. See [MCP server](/talk-to-your-agents/mcp-server).
-- **Via API (Vercel format)**: An API that streams responses over a server-side events (SSE) data-stream format. Use from any language/runtime, including the Vercel AI SDK. See [API (Vercel format)](/talk-to-your-agents/api).
+- **Via API (Vercel format)**: An API that streams responses over server-side events (SSE). Use from any language/runtime, including the Vercel's `useChat` and AI Element primatives for custom UIs. See [API (Vercel format)](/talk-to-your-agents/api).
 - **Via API (A2A format)**: An API that follows the Agent-to-Agent ('A2A') JSON-RPC protocol. Great for when combining Inkeep with different Agent frameworks that support the A2A format. See [A2A protocol](/talk-to-your-agents/a2a).
 
 <Cards>
@@ -19,5 +19,7 @@ You can talk to an Inkeep Agent in a few ways, including:
     HTTP JSON-RPC endpoint at /v1/mcp with session header management.
   </Card>
 </Cards>
+
+
 
 
