--- a/agents-docs/content/docs/concepts.mdx
+++ b/agents-docs/content/docs/concepts.mdx
@@ -1,5 +1,5 @@
 ---
-title: Core concepts of the Inkeep Agent Platform
+title: Core concepts
 sidebarTitle: Concepts
 description: Learn about the key building blocks of Inkeep - Sub Agents, Agents, tools, data components, and more.
 icon: "LuBoxes"
