--- a/agents-docs/content/docs/overview.mdx
+++ b/agents-docs/content/docs/overview.mdx
@@ -1,34 +1,21 @@
 ---
-title: Open Source Agent Builder
+title: Build AI Agents and AI Workflows
 sidebarTitle: Overview
 icon: "LuBookOpen"
+description: Ship Agent-driven AI assistants and workflow automations, with or without code.
 ---
 
-Inkeep is a platform to build and ship AI Agents with a **No-Code Visual Builder** and **TypeScript Agents SDK**. With **full 2-way sync**, technical and non-technical teams can create Agents in one platform.
+Inkeep is an open platform for creating AI Agents with a **No-Code Visual Builder** and **TypeScript SDK**. With **full 2-way sync**, technical and non-technical teams can create and manage Agents in one platform.
 
 ## Use Cases
 
-With Inkeep you can build **Real-time Chat Assistants** like:
-- a **customer experience agent** for support, docs, or in-app copilots
-- an **internal copilot** to do work for your support, sales, marketing, ops, and other teams
+With Inkeep you can build agent-driven **Chat Assistants** like:
+- a customer experience agent for support, docs, or in-app copilots
+- an internal copilot to do work for your support, sales, marketing, ops, and other teams
 
-Agents can also be used for **Agentic Workflow Automation** like:
+Agents can also be used to automate complex **AI Workflows** like:
 - Creating and updating knowledge bases, docs, and blogs
-- Updating CRMs, filling out RFPs, etc.
-- Automating back-office tasks for operations teams
-
-## Open Source Agent Builder
-
-Inkeep **Open Source** includes:
-- A Visual Builder & TypeScript SDK with 2-way sync
-- Multi-Agent Architecture to support Teams of Agents
-- MCP Tools with Credential Management
-- A UI Component Library for dynamic AI chat experiences
-- Triggering Agents with MCP, A2A, & Vercel SDK APIs
-- Observability via Traces UI & OpenTelemetry
-- Easy deployment to Vercel and Docker
-
-For unified search (managed RAG) and integration with Slack and support platforms, learn about [Inkeep Cloud](https://inkeep.com/get-started).
+- Updating CRMs, triaging tickets, and other business operations and processes
 
 ## Two ways to build Agents
 
@@ -67,6 +54,26 @@ A code-first approach for building and managing teams of Agents. Build with the 
    ```
 
 The **Visual Builder and Agents TypeScript SDK are fully interoperable**: your technical and non-technical teams can edit and manage Sub Agents in either format and switch or collaborate with others at any time.
+
+## Platform Overview
+
+**Inkeep Open Source** includes:
+- A Visual Builder & TypeScript SDK with 2-way sync
+- Multi-Agent architecture for building teams of agents
+- MCP Tools with Credential Management
+- A UI Component Library for dynamic AI chat experiences
+- Triggering Agents with MCP, A2A, & Vercel SDK APIs
+- Observability via a Traces UI & OpenTelemetry
+- Easy deployment to Vercel and Docker
+
+For unified search (managed RAG) and integration with Slack and support platforms, learn about [Inkeep Cloud](https://inkeep.com/get-started).
+
+## License & Community
+The Inkeep Platform is licensed under a [fair-code](/community/license) license that allows broad usage while protecting against certain competitive uses. 
+
+We designed Inkeep to be extensible and open: you can use the LLM provider of your choice, use Agents via open protocols, and easily deploy and self-host Agents in your own infra. 
+
+Join our [community](/community/inkeep-community) to stay up to date and get support.
 
 ## Next Steps
 
