fixes claude sonnet 4.5 definition

--- a/agents-docs/content/docs/typescript-sdk/agent-settings.mdx
+++ b/agents-docs/content/docs/typescript-sdk/agent-settings.mdx
@@ -175,7 +175,7 @@ models: {
 
 The framework supports a wide range of models from major AI providers:
 
-- **Anthropic**: For example `anthropic/claude-opus-4-1-20250805`, `anthropic/claude-sonnet-4.5-20250531`, `anthropic/claude-sonnet-4-20250514`, `anthropic/claude-3-5-haiku-20241022`, and more
+- **Anthropic**: For example `anthropic/claude-opus-4-1-20250805`, `anthropic/claude-sonnet-4-5-20250929`, `anthropic/claude-sonnet-4-20250514`, `anthropic/claude-3-5-haiku-20241022`, and more
 - **OpenAI**: For example `openai/gpt-5-2025-08-07`, `openai/gpt-4.1-mini-2025-04-14`, `openai/gpt-4.1-nano-2025-04-14`, and more
 - **Google**: For example `google/gemini-2.5-pro`, `google/gemini-2.5-flash`, `google/gemini-2.5-flash-lite`, and more
 - **Additional providers** via OpenRouter and gateway routing
@@ -306,9 +306,9 @@ You need the appropriate API key for your chosen provider:
 When using the Inkeep CLI, the following defaults are applied based on your chosen provider:
 
 **Anthropic:**
-- `base`: `anthropic/claude-sonnet-4.5-20250531`
-- `structuredOutput`: `anthropic/claude-sonnet-4.5-20250531`
-- `summarizer`: `anthropic/claude-sonnet-4.5-20250531`
+- `base`: `anthropic/claude-sonnet-4-5-20250929`
+- `structuredOutput`: `anthropic/claude-sonnet-4-5-20250929`
+- `summarizer`: `anthropic/claude-sonnet-4-5-20250929`
 
 **OpenAI:**
 - `base`: `openai/gpt-4.1-2025-04-14`
