visual builder page

--- a/agents-docs/content/docs/concepts.mdx
+++ b/agents-docs/content/docs/concepts.mdx
@@ -186,7 +186,7 @@ Once you've built your Agents, you can deploy them using:
 
 ## Architecture
 
-The Inkeep Agent Platform is composed of several key services and libraries that work together:
+The Inkeep Agent framework is composed of several key services and libraries that work together:
 
 - **agents-manage-api**: An API that handles configuration of Agents, Sub Agents, MCP Servers, Credentials, and Projects with a REST API.
 - **agents-manage-ui**: Visual Builder web interface for creating and managing Agents. Writes to the `agents-manage-api`.
