--- a/agents-docs/content/docs/overview.mdx
+++ b/agents-docs/content/docs/overview.mdx
@@ -1,38 +1,38 @@
 ---
-title: Build AI Agents and AI Workflows
+title: Build AI Agents and Agentic Workflows
 sidebarTitle: Overview
 icon: "LuBookOpen"
-description: Ship Agent-driven AI assistants and workflow automations, with or without code.
+description: Inkeep is a platform for building Agent-driven AI Chat Assistants and AI Workflows.
 ---
 
-Inkeep is an open platform for creating AI Agents with a **No-Code Visual Builder** and **TypeScript SDK**. With **full 2-way sync**, technical and non-technical teams can create and manage Agents in one platform.
+With Inkeep, you can build and ship AI Agents with a **No-Code Visual Builder** or **TypeScript SDK**. Agents can be edited in either code or no-code with **full 2-way sync**, so your technical and non-technical teams can create and manage Agents in a single platform.
 
 ## Use Cases
 
-With Inkeep you can build agent-driven **Chat Assistants** like:
-- a customer experience agent for support, docs, or in-app copilots
-- an internal copilot to do work for your support, sales, marketing, ops, and other teams
+Inkeep Agents can operate as real-time **AI Chat Assistants** as:
+- a customer experience agent for customer support, technical docs, or in-app product copilot
+- an internal copilot to assist your support, sales, marketing, ops, and other teams
 
-Agents can also be used to automate complex **AI Workflows** like:
+Agents can also be used to automate complex **AI Workflows** for tasks like:
 - Creating and updating knowledge bases, docs, and blogs
-- Updating CRMs, triaging tickets, and other business operations and processes
+- Updating CRMs, triaging tickets, and completing other business processes
 
-## Two ways to build Agents
+## Two ways to build
 
-### No-Code Visual Builder
+### No-Code Visual Agent Builder
 
-A no-code interface designed to let both technical and non-technical teams create and manage Agents.
+A no-code drag-and-drop canvas designed to let both technical and non-technical teams create and manage Agents.
 
 <img
   src="/gifs/visual-builder.gif"
-  alt="Visual Builder Demo"
+  alt="No-Code Agent Builder demo"
   width="100%"
   style={{ borderRadius: "10px" }}
 />
 
-### TypeScript SDK
+### TypeScript Agents SDK
 
-A code-first approach for building and managing teams of Agents. Build with the tools your engineering team expects.
+A code-first approach for building and managing teams of Agents with a multi-agent architecture. The SDK allows developers to build with the tools engineering teams expect.
 
    ```typescript
    import { agent, subAgent } from "@inkeep/agents-sdk";
@@ -53,7 +53,7 @@ A code-first approach for building and managing teams of Agents. Build with the 
    });
    ```
 
-The **Visual Builder and Agents TypeScript SDK are fully interoperable**: your technical and non-technical teams can edit and manage Sub Agents in either format and switch or collaborate with others at any time.
+The **Visual Builder and TypeScript SDK are fully interoperable**: your technical and non-technical teams can edit and manage Agents in either format and switch or collaborate with others at any time.
 
 ## Platform Overview
 
@@ -68,10 +68,9 @@ The **Visual Builder and Agents TypeScript SDK are fully interoperable**: your t
 
 For unified search (managed RAG) and integration with Slack and support platforms, learn about [Inkeep Cloud](https://inkeep.com/get-started).
 
-## License & Community
-The Inkeep Platform is licensed under a [fair-code](/community/license) license that allows broad usage while protecting against certain competitive uses. 
+## Our Approach
 
-We designed Inkeep to be extensible and open: you can use the LLM provider of your choice, use Agents via open protocols, and easily deploy and self-host Agents in your own infra. 
+Inkeep is designed to be extensible and open: you can use the LLM provider of your choice, use Agents via standard protocols, and with a [fair-code](/community/license) license and great devex, easily deploy and self-host Agents in your own infra.
 
 Join our [community](/community/inkeep-community) to stay up to date and get support.
 
