--- a/agents-docs/content/docs/quick-start/start-development.mdx
+++ b/agents-docs/content/docs/quick-start/start-development.mdx
@@ -1,6 +1,6 @@
 ---
 title: Quick Start
-description: Start developing your agents with the Inkeep Agent Platform
+description: Start developing your agents with the Inkeep Agent framework
 icon: "LuRocket"    
 ---
 
