--- a/agents-docs/content/docs/typescript-sdk/agent-settings.mdx
+++ b/agents-docs/content/docs/typescript-sdk/agent-settings.mdx
@@ -4,9 +4,9 @@ description: Learn how to customize your Agents.
 icon: "LuUser"
 ---
 
-Agents and Sub Agents are the core building blocks of the Inkeep framework, designed to be both powerful individual workers and collaborative team members in multi-agent systems.
+Agents and Sub Agents are the core building blocks of the Inkeep Agent framework.
 
-In Inkeep, Agent is made up of Sub Agents that can seamlessly delegate or transfer control to each other, share context, and work together to respond to a user or complete a task.
+An Agent is made up of one or more Sub Agents that can delegate or transfer control with each other, share context, use tools to respond to a user or complete a task.
 
 ## Creating an Agent
 
