--- a/agents-docs/content/docs/visual-builder/sub-agents.mdx
+++ b/agents-docs/content/docs/visual-builder/sub-agents.mdx
@@ -1,42 +1,29 @@
 ---
-title: Agents
-description: Agents define the relationships between sub-agents and tools.
+title: Get started with the Visual Agent Builder
+sidebarTitle: Agents & Sub Agents 
+description: Agents define the relationships between Sub Agents and tools.
 icon: "LuSpline"
 ---
 
-## Creating your first agent
+## Overview
+
+An Agent is the top-level entity you can chat and interact with in the Visual Builder.
+
+An Agent is made up of one or more Sub Agents. The Sub Agents that make up an Agent can delegate or transfer control to each other, share context, or use tools to respond to a user or complete a task.
+
+You can use the Visual Builder to add Sub Agents to an Agent, give Sub Agents tools, and connect Sub Agents with each other to establish their relationships.
+
+## Creating your first Agent
 
 <Video src="/videos/create-an-agent.mp4" />
 
-1. Go to the Agents tab in the left sidebar. Then select "Create Agent".
+1. Go to the Agents tab in the left sidebar. Then select "Create Agent". 
 
-2. After you create a new agent, it will start with a default sub-agent. Add prompt to the sub-agent, which is a mandatory field.
-
-<Note>
-  To delete a sub-agent, click on the sub-agent box and then hit the backspace key.
-</Note>
-
-The following are configurable options for the sub-agent through the Visual Builder:
-
-| Parameter             | Type   | Required | Description                                                                                                                  |
-| --------------------- | ------ | -------- | ---------------------------------------------------------------------------------------------------------------------------- |
-| `name`                | string | Yes      | Human-readable name for the sub-agent                                                                                        |
-| `description`         | string | No       | Brief description of the sub-agent's purpose and capabilities                                                                |
-| `prompt`              | string | Yes      | Detailed behavior guidelines and system prompt for the sub-agent                                                             |
-| `model`               | string | No       | AI model identifier (e.g., "anthropic/claude-sonnet-4-20250514") Choose a model that you prefer                              |
-| `providerOptions`     | object | No       | Model-specific configuration options (temperature, maxTokens, etc.)                                                          |
-| `Data components`     | object | No       | Data components that the sub-agent can use. See [Data Components](/visual-builder/structured-outputs/data-components) for details               |
-| `Artifact components` | array  | No       | Artifact components that the sub-agent can use. See [Artifact Components](/visual-builder/structured-outputs/artifact-components) for details   |
+2. Provide a name, prompt, and description. 
 
 ### Agent Prompt
 
-You can configure an agent-level prompt that gets automatically added to all sub-agents in your agent. This provides consistent context and behavior guidelines across your entire sub-agent network.
-
-**To add an agent prompt:**
-
-1. Click on the agent settings/configuration area
-2. Add your agent prompt in the "Agent Prompt" field
-3. This prompt will be injected into each sub-agent's system prompt
+You can configure an Agent-level prompt that gets automatically added to all Sub Agents that make up the Agent. This provides consistent context and behavior guidelines so Sub Agents respond and act as one cohesive unit.
 
 **Example uses:**
 
@@ -44,9 +31,21 @@ You can configure an agent-level prompt that gets automatically added to all sub
 - Domain-specific context that applies to all sub-agents
 - Consistent behavior rules across the sub-agent network
 
-## Trying the agent
+Once an Agent is created, you can always edit the prompt by:
 
-To try the agent, first save the agent by clicking the "Save changes" button in the top right corner.
+1. Clicking on the **Agent Settings** button next to **Try it**
+2. Modify your prompt in the "Agent Prompt" field
+3. Click **Save**
+
+## Default Sub Agent
+
+When you create an Agent, it'll have a **Default Sub Agent** by default. This is the Sub Agent that first receives and processes a user message.
+
+Configure its name and prompt, then click **Save**.
+
+## Trying the Agent
+
+To try the Agent, ensure it has at least one Sub Agent, then save the Agent by clicking the "Save changes" button in the top right corner.
 
 Then, click the "Try it" button in the top right corner and type into the chat input.
 
@@ -54,11 +53,11 @@ Then, click the "Try it" button in the top right corner and type into the chat i
 
 ## Adding tools
 
-Tools are used to perform actions in the agent. You can create MCP tools in the Visual Builder, see the [MCP Servers](/visual-builder/tools/mcp-servers) page for more information.
+Tools are used to perform actions in the Agent. You can register MCP tools in the Visual Builder. See the [MCP Servers](/visual-builder/tools/mcp-servers) page to get started.
 
-Once you have a tool, add the tool to the agent by dragging and dropping the MCP tool box into the agent.
+Once you have an MCP Server registered, you can add it to a Sub Agent by dragging and dropping the **MCP** block from the top left onto the Canvas.
 
-To connect the tool to the sub-agent, click on connector at the top of the MCP tool box, and then drag the connector to the sub-agent. A line will appear, indicating that the tool is connected to the sub-agent.
+To connect the tool to the Sub Agent, click the "+" icon at the top of the MCP block, then drag the connector to the Sub Agent. A line will appear, indicating that the tool is connected to the Sub Agent.
 
 <Video src="/videos/add-tool-vb.mp4" />
 
@@ -66,30 +65,47 @@ To connect the tool to the sub-agent, click on connector at the top of the MCP t
   To delete a tool, click on the tool box and then hit the backspace key.
 </Note>
 
-## Adding sub-agents
+## Add other Sub Agents
 
-Sub-agents are specialized sub-agents that handle specific tasks within your main sub-agent's workflow. They allow you to delegate focused responsibilities to separate sub-agents with their own prompt and capabilities.
+When you have tasks that get more complex, you'll likely want to create more Sub Agents that are specialized in narrow tasks and have prompts and tools focused on their roles.
 
-To add a sub-agent:
+To create more Sub Agents:
+1. Drag and drop a **Sub Agent** block from the top left toolbar onto the canvas.
+2. Configure the Sub Agent with its own prompt and settings
+3. Connect it to the parent Sub Agent by clicking the connector at the top of the Sub Agent box and dragging it to the main Sub Agent
 
-1. Drag and drop a sub-agent box from the toolbar into the agent
-2. Configure the sub-agent with its own prompt and settings
-3. Connect it to the parent sub-agent by clicking the connector at the top of the sub-agent box and dragging it to the main sub-agent
+When connected, a line will appear showing the relationship between the Sub Agents.
 
-When connected, a line will appear showing the relationship between the sub-agents.
+A few notes:
+- To delete a Sub Agent, click on the Sub Agent box and then hit the backspace key.
+- An Agent must have at least one Sub Agent. If you delete the default Sub Agent, add a new one before trying the Agent.
 
 <Video src="/videos/add-sub-agent-vb.mp4" />
 
+### Sub Agent configuration
+
+The following are configurable options for the Sub Agent through the Visual Builder:
+
+| Parameter             | Type   | Required | Description                                                                                                                  |
+| --------------------- | ------ | -------- | ---------------------------------------------------------------------------------------------------------------------------- |
+| `name`                | string | Yes      | Human-readable name for the Sub Agent                                                                                        |
+| `description`         | string | No       | Brief description of the Sub Agent's purpose and capabilities                                                                |
+| `prompt`              | string | Yes      | Detailed behavior guidelines and system prompt for the Sub Agent                                                             |
+| `model`               | string | No       | AI model identifier (e.g., "anthropic/claude-sonnet-4-20250514"). Choose a model that you prefer                              |
+| `providerOptions`     | object | No       | Model-specific configuration options (temperature, maxTokens, etc.)                                                          |
+| `Data components`     | object | No       | Data components that the Sub Agent can use. See [Data Components](/visual-builder/structured-outputs/data-components) for details               |
+| `Artifact components` | array  | No       | Artifact components that the Sub Agent can use. See [Artifact Components](/visual-builder/structured-outputs/artifact-components) for details   |
+
 ## Adding data components
 
-Data components are used to render rich UI components directly in the chat. Before adding a data component you will first need to create a data component, see the [Data Components](/visual-builder/structured-outputs/data-components) page for more information.
+Data components are used to render rich UI components directly in the chat. Before adding a data component, you will first need to create a data component. See the [Data Components](/visual-builder/structured-outputs/data-components) page for more information.
 
-Then, add the data component to your sub-agent by clicking on the sub-agent box, and then selecting which data components you want to add.
+Then, add the data component to your Sub Agent by clicking the Sub Agent box and then selecting which data components you want to add.
 
 ## Adding artifact components
 
 To create artifact components, see the [Artifact Components](/visual-builder/structured-outputs/artifact-components) page for details.
 
-Add the artifact component to your sub-agent by clicking on the sub-agent box in the agent, then selecting which artifact components you want to add.
+Add the artifact component to your Sub Agent by clicking on the Sub Agent box in the Agent, then selecting which artifact components you want to add.
 
-When the sub-agent uses tools or delegates to other sub-agents, artifacts will be automatically created according to your defined schema, capturing the source and content of each interaction.
+When the Sub Agent uses tools or delegates to other Sub Agents, artifacts will be automatically created according to your defined schema, capturing the source and content of each interaction.
