--- a/agents-docs/content/docs/community/inkeep-community.mdx
+++ b/agents-docs/content/docs/community/inkeep-community.mdx
@@ -3,10 +3,25 @@ title: Join & Follow
 icon: "LuUsers"
 ---
 
-To get help, share ideas, and provide feedback, join the our [Slack](https://inkeep-ai.slack.com/ssb/redirect) community.
+To get help, share ideas, and provide feedback, join our [Slack community](https://inkeep-ai.slack.com/ssb/redirect).
 
-We'd love to hear what you're building and be helpful in that journey. Let us know how we can help! 
+We'd love to hear about what you're building.
 
-You can also find us on [Twitter (𝕏)](https://x.com/inkeep_ai), [YouTube](https://www.youtube.com/@inkeep-ai), and [LinkedIn](https://www.linkedin.com/company/inkeep). 
+You can also find us on:
+
+<Cards>
+  <Card title="𝕏 (Twitter)" icon="LuTwitter" href="https://x.com/inkeep_ai">
+    Updates, tips, and shout‑outs for builders. 
+  </Card>
+  <Card title="GitHub" icon="LuGithub" href="https://github.com/inkeep/agents">
+    Star the repo, open issues, and contribute.
+  </Card>
+  <Card title="YouTube" icon="LuYoutube" href="https://www.youtube.com/@inkeep-ai">
+    Practical demos, tutorials, and deep dives.
+  </Card>
+  <Card title="LinkedIn" icon="LuLinkedin" href="https://www.linkedin.com/company/inkeep/">
+    Company updates, launches, and hiring news. 
+  </Card>
+</Cards>
 
 Feel free to tag us at `@inkeep_ai` on 𝕏 or at `@Inkeep` on LinkedIn with a video of what you're building, we like to highlight what builders are doing with Inkeep where we can.
