--- a/agents-docs/content/docs/typescript-sdk/tools/mcp-servers.mdx
+++ b/agents-docs/content/docs/typescript-sdk/tools/mcp-servers.mdx
@@ -1,5 +1,6 @@
 ---
 title: Register and use MCP Servers
+sidebarTitle: Register MCP Servers
 description: Learn how to add and configure MCP servers for your agents
 icon: "LuHammer"
 ---
