--- a/agents-docs/content/docs/visual-builder/sub-agents.mdx
+++ b/agents-docs/content/docs/visual-builder/sub-agents.mdx
@@ -1,7 +1,7 @@
 ---
 title: Get started with the Visual Agent Builder
 sidebarTitle: Agents & Sub Agents 
-description: Agents define the relationships between Sub Agents and tools.
+description: Create Agents with a No-Code Visual Agent Builder
 icon: "LuSpline"
 ---
 
